# arnette-ai

./: .env.example  .gitignore  LICENSE.md  README.md  agents.py  brain.py  main.py  pyproject.toml  tasks.py
maps/: actions.py  objects.py
setup/: llama2_model_file
